[WebView autofill] Support checkbox and select controls

- Sends/gets check status, option_values, option_contents to/from Java.
- Also change autofill() to take Object parameter because upstream are
  not ready for Android O change yet.

BUG=739535

Change-Id: I038d068a8bf7dc51cc95562b48d91aa66e2b7b4e
Reviewed-on: https://chromium-review.googlesource.com/560661
Reviewed-by: Roger McFarlane <rogerm@chromium.org>
Reviewed-by: Selim Gurun <sgurun@chromium.org>
Commit-Queue: Tao Bai <michaelbai@chromium.org>
Cr-Commit-Position: refs/heads/master@{#484777}
Former-commit-id: 81b8dd52c6482d877fb629531a3768b557de70b8